--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.2",
+    "multiselect-react-dropdown": "^2.0.25",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.4",
-    "react-router-dom": "^6.4.2",
+    "react-router-dom": "6.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=5000 react-scripts start",
+    "start": "PORT=8080 react-scripts start",
     "build": "react-scripts build"
   },
   "browserslist": {
